--- a/fiestas/templates/base.html
+++ b/fiestas/templates/base.html
@@ -33,12 +33,15 @@
       };      
       .menupleca {
         background-color: {% get_color 'menu' %};
-      }
+      };
     </style>
     <nav class="navbar navbar-expand-lg sticky-top pleca" >
       {% if user.is_authenticated %}
         <a class="nav-brand" href="{% url 'home' %}">
           <img src="{% static 'fiesta.png' %}" />
+        </a>
+        <a class="nav-brand" href="{% url 'home' %}">
+          <img src="{% get_imagen logo %}" />
         </a>
       
         <div class="dropdown">
