--- a/fiestas/templates/salones/parametros/listImagenes.html
+++ b/fiestas/templates/salones/parametros/listImagenes.html
@@ -13,28 +13,19 @@
     <thead class="thead-dark">
     <tr>
         <th>{{ encabezados.title }} </th>
-        <th>{{ encabezados.description }} </th>
         <th>{{ encabezados.image }} </th>
         <th></th>
     </tr>
 </thead>
 <tbody id="CuerpoCatalogo">
-{% for elemento in lista  %}
+{% for elemento in object_list  %}
 <tr>
-    <td>{{ elemento.descripcion }}</td>
-    <td>{{ elemento.bandactivo|yesno:"Activo,Inactivo,Indefinido" }}</td>
+    <td>{{ elemento.title }}</td>
+    <td>{{ elemento.image }}</td>
     <td class="text-center">
-      <!-- Read book buttons -->
-      <a type="button" class="read-book btn btn-sm btn-primary" href="{% url detalle elemento.id_pk %}">
-        <span class="fa fa-eye"></span>
-      </a>
       <!-- Update book buttons -->
-      <a type="button" class="update-book btn btn-sm btn-info" href="{% url update elemento.id_pk %}" >
+      <a type="button" class="update-book btn btn-sm btn-info" href="{% url update elemento.pk %}" >
         <span class="fa fa-pencil"></span>
-      </a>
-      <!-- Delete book buttons -->
-      <a type="button" class="delete-book btn btn-sm btn-danger" href="{% url borra elemento.id_pk %}">
-        <span class="fa fa-trash"></span>
       </a>
     </td>
 </tr>
