--- a/fiestas/templates/base.html
+++ b/fiestas/templates/base.html
@@ -37,52 +37,7 @@
     </style>
     <nav class="navbar navbar-expand-lg sticky-top pleca" >
       {% if user.is_authenticated %}
-        <a class="nav-brand" href="{% url 'home' %}">
-          <img src="{% static 'fiesta.png' %}" />
-        </a>
-        <a class="nav-brand" href="{% url 'home' %}">
-          <img src="{% get_imagen logo %}" />
-        </a>
-      
-        <div class="dropdown">
-          <button class="btn btn-primary dropdown-toggle menupleca" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <span class="fa-solid fa-gear"></span>
-            Catalogos
-          </button>
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">            
-          <a class="dropdown-item" href="{% url 'lista_actividad' %}">Actividades</a>
-          <a class="dropdown-item" href="{% url 'lista_evento' %}">Eventos</a>
-          <a class="dropdown-item" href="{% url 'lista_servicio' %}">Servicios</a>  
-          <a class="dropdown-item" href="{% url 'lista_tipo_cliente' %}">Tipo Personas</a>
-          <a class="dropdown-item" href="{% url 'clientes' %}">Personas</a>
-          <a class="dropdown-item" href="{% url 'list_color' %}">Parametro colores</a>
-          </div>
-        </div>
-        <div class="dropdown">
-          <button class="btn btn-secondary dropdown-toggle menupleca" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
-            <span class="fas fa-birthday-cake"></span>
-            Eventos
-          </button>
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">          
-            <a class="dropdown-item" href="{% url 'eventos' %}">Eventos</a>
-          </div>
-        </div>
-        <div class="dropdown">
-          <button class="btn btn-secondary dropdown-toggle menupleca" id="dropdownMenuUsuario" data-toggle="dropdown" >
-            <span class="fas fa-user"></span>
-            Usuarios
-          </button>
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuUsuario">           
-          <a class="dropdown-item" href="{% url 'password_change' %}">
-            <span class="fas fa-key"></span>
-            Cambiar la contraseña
-          </a>
-          </div>
-        </div>
-      <form class="form-inline navbar-nav ml-auto" action="/action_page.php">
-        <a class="btn btn-danger" href="{% url 'logout' %}">Salir</a>
-      </form>
-
+        {% include 'menu.html' %}
       {% else %}      
       <div class="form-inline navbar-nav ml-auto" action="/action_page.php">
         <a class="btn btn-success" href="{% url 'login' %}">Ingresar</a>
@@ -90,8 +45,9 @@
       {% endif %}
     </nav>
 
-    <div class="container-md border float-nonet mx-auto align-items-center">
-      <main >{% block content %} {% endblock %}</main>
+    <div class="vh-100 w-75 container-fluid align-items-center"
+    style="background-color: {% get_color 'fondo' %};">
+      {% block content %} {% endblock %}
     </div>
 
   </body>
