modificados:     fiestas/templates/menu.html

--- a/fiestas/templates/menu.html
+++ b/fiestas/templates/menu.html
@@ -13,8 +13,8 @@
     <a class="dropdown-item" href="{% url 'lista_actividad' %}">Actividades</a>
     <a class="dropdown-item" href="{% url 'lista_evento' %}">Eventos</a>
     <a class="dropdown-item" href="{% url 'lista_servicio' %}">Servicios</a> 
-    <a class="dropdown-item" href="{% url 'clasificacion_servicio_lista' %}">Parametro colores</a>
-    <a class="dropdown-item" href="{% url 'desglose_servicio_lista' %}">Parametro colores</a> 
+    <a class="dropdown-item" href="{% url 'clasificacion_servicio_lista' %}">Clasificacion servicio</a>
+    <a class="dropdown-item" href="{% url 'desglose_servicio_lista' %}">Desglose Servicio</a> 
     <a class="dropdown-item" href="{% url 'lista_tipo_cliente' %}">Tipo Personas</a>
     <a class="dropdown-item" href="{% url 'clientes' %}">Personas</a>
     <a class="dropdown-item" href="{% url 'list_color' %}">Parametro colores</a>
