--- a/fiestas/templates/salones/catalogos/listDesglose.html
+++ b/fiestas/templates/salones/catalogos/listDesglose.html
@@ -20,7 +20,7 @@
     </tr>
 </thead>
 <tbody id="CuerpoCatalogo">
-{% for elemento in lista  %}
+{% for elemento in object_list  %}
 <tr>
     <td>{{ elemento.cveclasifservicio }}</td>
     <td>{{ elemento.cvedesgloseservicio }}</td>
@@ -28,11 +28,11 @@
     <td>{{ elemento.bandactivo|yesno:"Activo,Inactivo,Indefinido" }}</td>
     <td class="text-center">
       <!-- Update book buttons -->
-      <a type="button" class="update-book btn btn-sm btn-info" href="{% url update elemento.id_pk %}" >
+      <a type="button" class="update-book btn btn-sm btn-info" href="{% url update elemento.pk %}" >
         <span class="fa fa-pencil"></span>
       </a>
       <!-- Delete book buttons -->
-      <a type="button" class="delete-book btn btn-sm btn-danger" href="{% url borra elemento.id_pk %}">
+      <a type="button" class="delete-book btn btn-sm btn-danger" href="{% url borra elemento.pk %}">
         <span class="fa fa-trash"></span>
       </a>
     </td>
